# task_manager

./: .gitignore  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  README.md  docker-compose.yml  pyproject.toml
taskmanager/: main.py  requirements.txt
taskmanager/taskmanager/: settings.py  urls.py
taskmanager/tasks/: admin.py  create_groups.py  fields.py  forms.py  mixins.py  models.py  services.py  urls.py  views.py
taskmanager/tasks/management/commands/: create_or_delete_users_or_tasks.py  create_users_and_tasks.py
taskmanager/tasks/migrations/: 0001_initial.py  0002_auto_20240407_1424.py  0003_auto_20240407_1703.py  0004_epic_alter_task_table_comment_alter_task_description_and_more.py  0005_sprint_sprint_end_date_after_start_date.py  0006_sprint_epic_alter_sprint_tasks.py  0007_formsubmission_task_file_upload_task_image_upload_and_more.py
tests/: test_task_manager.py
