[tool.poetry]
name = "task_manager"
version = "0.1.0"
description = ""
authors = ["Munashe Njanji <munashenjanji45@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.10"
django = "4.2.2"
psycopg = "^3.1.18"
python-dotenv = "^1.0.1"


[tool.poetry.group.dev.dependencies]
pytest = "^8.1.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
